--- a/DFT2/DFT2.csproj
+++ b/DFT2/DFT2.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>DFT2.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
